# MediaCore

./: README.md  build.gradle  settings.gradle
mediacore/: CMakeLists.txt  build.gradle  gen_javah.sh  upload_to_jcenter.sh
mediacore/src/androidTest/java/com/zxzx74147/mediacore/: ExampleInstrumentedTest.java
mediacore/src/main/: AndroidManifest.xml
mediacore/src/main/cpp/: audio_interface.cpp  audio_interface_gen.cpp  common_log.h
mediacore/src/main/cpp/libspeex/: arch.h  buffer.c  fftwrap.c  jitter.c  kiss_fft.c  preprocess.c
mediacore/src/main/cpp/libspeex/jni/: Android.mk
mediacore/src/main/cpp/libspeex/speex/: speex_jitter.h
mediacore/src/main/cpp/pcmprocess/: audio_process.cpp  audio_process.h  membuffer.cpp  membuffer.h  pcmprocess.cpp  pcmprocess.h
mediacore/src/main/java/com/zxzx74147/mediacore/: ErrorDefine.java  MediaCore.java
mediacore/src/main/java/com/zxzx74147/mediacore/components/muxer/: Mp4Muxer.java  Mp4Util.java
mediacore/src/main/java/com/zxzx74147/mediacore/components/util/: FileSelectUtil.java  FileUtil.java  StateConfig.java  TimeUtil.java  VideoUtil.java
mediacore/src/main/java/com/zxzx74147/mediacore/components/video/: Mp4VideoConfig.java
mediacore/src/main/java/com/zxzx74147/mediacore/editor/: MediaEditor.java
mediacore/src/main/java/com/zxzx74147/mediacore/generator/: MediaGenerator.java
mediacore/src/main/java/com/zxzx74147/mediacore/player/: FilterVideoView.java  IJKFilterVideoView.java
mediacore/src/main/java/com/zxzx74147/mediacore/recorder/: IProcessListener.java  IRecorderListener.java  MediaRecorder.java
mediacore/src/main/res/values/: strings.xml
mediacore/src/test/java/com/zxzx74147/mediacore/: ExampleUnitTest.java
(+154 files in other folders)
